--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,6 @@ Date: 2018-09-11
 Author: Who wrote it
 Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
-License: What license is it under?
+License: MIT
 Encoding: UTF-8
 RoxygenNote: 6.1.0
